--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -1,19 +1,23 @@
 @use "~@catppuccin/palette/scss/catppuccin";
 
 @mixin themify() {
-	@each $flavor, $colors in catppuccin.$palette {
-		.theme-#{$flavor} & {
-			$theme-map: (
-			) !global;
-			@each $key, $color in $colors {
-				$theme-map: map-merge($theme-map, ($key: $color)) !global;
-			}
-			@content;
-			$theme-map: null !global;
-		}
-	}
+  @each $flavor, $colors in catppuccin.$palette {
+    .theme-#{$flavor} & {
+      $theme-map: () !global;
+      @each $key, $color in $colors {
+        $theme-map: map-merge(
+          $theme-map,
+          (
+            $key: $color,
+          )
+        ) !global;
+      }
+      @content;
+      $theme-map: null !global;
+    }
+  }
 }
 
 @function themed($key) {
-	@return map-get($theme-map, $key);
+  @return map-get($theme-map, $key);
 }
