--- a/src/styles/creative_coding.module.scss
+++ b/src/styles/creative_coding.module.scss
@@ -8,6 +8,8 @@
     border-radius: 5px;
     border: 1px solid var(--md-sys-color-outline);
     box-shadow: 1px 1px 3px var(--md-sys-color-outline);
+    width: 500px;
+    height: 500px;
   }
 
   .data-container {
